Senior_Project/src/senior/project/test/server/errors/ServerInvalidMealException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidMealException extends Exception {

  public ServerInvalidMealException(String msg) {
    super(msg);
  }
}
